Fix rebase conflicts

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^24.9.0",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
+    "commander": "^3.0.1",
     "rollup": "^1.21.2",
     "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-terser": "^5.1.2",
