--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "baseUrl": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "plugins": [
       {
         "name": "typescript-tslint-plugin",
