--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "release": "standard-version --release-as",
     "prepublish": "npm run build"
   },
+  "bin": {
+    "mama": "dist/index.js"
+  },
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "browser": "dist/index.bundle.js",
@@ -27,14 +30,19 @@
     "jest": "^24.9.0",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
-    "commander": "^3.0.1",
     "rollup": "^1.21.2",
     "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-preserve-shebang": "^0.1.6",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-strip-shebang": "^1.2.6",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript2": "^0.24.2",
     "standard-version": "^7.0.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3",
     "typescript-tslint-plugin": "^0.5.4"
+  },
+  "dependencies": {
+    "commander": "^3.0.1"
   }
 }
