--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "release": "standard-version --release-as",
     "prepublish": "npm run build"
   },
+  "bin": {
+    "mama": "dist/index.js"
+  },
   "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "browser": "dist/index.bundle.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wongnai/mama.js.git"
@@ -29,11 +30,13 @@
     "prettier": "^1.18.2",
     "rollup": "^1.21.2",
     "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript2": "^0.24.2",
     "standard-version": "^7.0.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3",
     "typescript-tslint-plugin": "^0.5.4"
+  },
+  "dependencies": {
+    "commander": "^3.0.1"
   }
 }
