--- a/package.json
+++ b/package.json
@@ -37,6 +37,14 @@
     "typescript-tslint-plugin": "^0.5.4"
   },
   "dependencies": {
-    "commander": "^3.0.1"
+    "@types/cli-progress": "^1.8.1",
+    "@types/lodash": "^4.14.138",
+    "@types/ora": "^3.2.0",
+    "cli-progress": "^3.1.0",
+    "commander": "^3.0.1",
+    "execa": "^2.0.4",
+    "lodash": "^4.17.15",
+    "make-dir": "^3.0.0",
+    "or": "^0.2.0"
   }
 }
