--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/wongnai/mama.js#readme",
   "devDependencies": {
     "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.138",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "lint-staged": "^9.2.5",
@@ -37,6 +38,7 @@
     "typescript-tslint-plugin": "^0.5.4"
   },
   "dependencies": {
-    "commander": "^3.0.1"
+    "commander": "^3.0.1",
+    "lodash": "^4.17.15"
   }
 }
