ย้าย @types ไป dev dependencies

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/wongnai/mama.js#readme",
   "devDependencies": {
+    "@types/execa": "^2.0.0",
     "@types/jest": "^24.0.18",
+    "@types/make-dir": "^2.1.0",
+    "@types/ora": "^3.2.0",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "lint-staged": "^9.2.5",
@@ -37,9 +40,6 @@
     "typescript-tslint-plugin": "^0.5.4"
   },
   "dependencies": {
-    "@types/cli-progress": "^1.8.1",
-    "@types/lodash": "^4.14.138",
-    "@types/ora": "^3.2.0",
     "cli-progress": "^3.1.0",
     "commander": "^3.0.1",
     "execa": "^2.0.4",
