--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/wongnai/mama.js#readme",
   "devDependencies": {
+    "@types/figlet": "^1.2.0",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.138",
     "husky": "^3.0.5",
@@ -38,7 +39,10 @@
     "typescript-tslint-plugin": "^0.5.4"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
     "commander": "^3.0.1",
-    "lodash": "^4.17.15"
+    "figlet": "^1.2.4",
+    "lodash": "^4.17.15",
+    "ora": "^3.4.0"
   }
 }
