--- a/packages/mama-noodle/package.json
+++ b/packages/mama-noodle/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mama-noodle",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Core package of mama.js",
   "main": "index.js",
   "keywords": ["mama", "mama.js", "javascript", "bundle", "library"],
   "author": "wongnai",
   "license": "MIT",
   "scripts": {
-    "release": "standard-version --release-as",
+    "release": "standard-version --release-as"
   },
   "dependencies": {
     "husky": "^3.0.5",
