--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,7 +9,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
-
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
     - name: Build
       uses: actions/setup-node@v1
       run: |
