--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        processs.env.NODE_ENV=production npm run build
+        NODE_ENV=production npm run build
     - name: GitHub Pages Deploy
       uses: crazy-max/ghaction-github-pages@v1
       with:
