--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,9 @@ jobs:
     - name: Build
       run: |
         npm install
-        NODE_ENV=production npm run build
+        npm run build
+      env:
+        NODE_ENV: production
     - name: GitHub Pages Deploy
       uses: crazy-max/ghaction-github-pages@v1
       with:
