--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "type": "git",
     "url": "git+https://github.com/wongnai/mama.js.git"
   },
-  "keywords": ["mama", "mama.js", "javascript", "bundle", "library"],
+  "keywords": [
+    "mama",
+    "mama.js",
+    "javascript",
+    "bundle",
+    "library"
+  ],
   "author": "wongnai",
   "license": "MIT",
   "bugs": {
@@ -25,12 +31,11 @@
   "devDependencies": {
     "@types/cli-progress": "^1.8.1",
     "@types/execa": "^2.0.0",
-    "@types/jest": "^24.0.18",
-    "@types/make-dir": "^2.1.0",
-    "@types/ora": "^3.2.0",
     "@types/figlet": "^1.2.0",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.138",
+    "@types/make-dir": "^2.1.0",
+    "@types/ora": "^3.2.0",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "lint-staged": "^9.2.5",
@@ -44,17 +49,13 @@
     "typescript-tslint-plugin": "^0.5.4"
   },
   "dependencies": {
-    "cli-progress": "^3.1.0",
-    "commander": "^3.0.1",
-    "execa": "^2.0.4",
-    "lodash": "^4.17.15",
-    "make-dir": "^3.0.0",
     "chalk": "^2.4.2",
-    "commander": "^3.0.1",
     "cli-progress": "^3.1.0",
+    "commander": "^3.0.1",
     "execa": "^2.0.4",
     "figlet": "^1.2.4",
     "lodash": "^4.17.15",
+    "make-dir": "^3.0.0",
     "ora": "^3.4.0"
   }
 }
